--- a/css/style.css
+++ b/css/style.css
@@ -93,27 +93,42 @@ h1, h2, h3, h4, h5, h6 {
 
 .currency-body {
   width: 50vw;
-}
-
-.currency-body__exchange-wrapper {
-  width: 100%;
-  background-color: yellowgreen;
-  padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.currency-body__display-currency {
-  width: 100%;
   height: auto;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: greenyellow;
+}
+
+.currency-body__arrow-change {
+  width: 10%;
+  height: 100%;
   border: 2px solid red;
+}
+
+.currency-body__wrapper-currency-value {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.currency-body__wrapper-items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -125,8 +140,43 @@ h1, h2, h3, h4, h5, h6 {
           align-items: center;
 }
 
-.display-currency__items {
-  color: green;
-  text-align: center;
-  padding: 10px;
+.currency-body__items-btn {
+  padding: 5px 10px;
+  border: 1px solid black;
+  background-color: white;
+  cursor: pointer;
+}
+
+.currency-body__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.currency-body__currency-input {
+  margin: 10px;
+  width: 100%;
+  font-size: 2em;
+}
+
+.currency-body__wrapper-rate {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
