--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -20,12 +20,6 @@ $heightTxt: 2em;
   align-items: flex-start;
 }
 
-.currency-body__arrow-change {
-  width: 10%;
-  height: 100%;
-  border: 2px solid red;
-}
-
 .currency-body__wrapper-currency-value {
   display: flex;
   flex-direction: column;
@@ -37,7 +31,6 @@ $heightTxt: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  // align-items: center;
 }
 
 .currency-body__wrapper-items {
@@ -53,24 +46,19 @@ $heightTxt: 2em;
   cursor: pointer;
 }
 
-.input-btn_active {
-  background-color: rgb(32, 199, 32);
-}
-
 .currency-body__rate-btn {
+  width: 100%;
+  height: 100%;
   padding: 10px 15px;
   border: 1px solid grey;
-  background-color: white;
+  background: white;
   cursor: pointer;
 }
-
-.rate-btn_active{
-   background-color: rgb(32, 199, 32);
+.btn_active {
+  background: greenyellow;
 }
-
 .currency-body__currency-input {
   margin: 10px;
-  width: 100%;
   font-size: $heightTxt;
   padding-left: 10px;
   border: 1px solid grey;
