Добавлено меню показа курсов всех валют

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -3,6 +3,7 @@
 $heightTxt: 2em;
 
 .wrapper-all {
+  position: relative;
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
@@ -13,24 +14,33 @@ $heightTxt: 2em;
 }
 
 .currency-body {
+  position: relative;
   width: 50vw;
   height: auto;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .currency-body__wrapper-currency-value {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+
+  h2 {
+    padding: 5px 0px;
+  }
 }
 
 .currency-body__wrapper-currency-rate {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  h2 {
+    padding: 5px 0px;
+  }
 }
 
 .currency-body__wrapper-items {
@@ -40,28 +50,42 @@ $heightTxt: 2em;
 }
 
 .currency-body__input-btn {
+  position: relative;
   padding: 10px 15px;
   border: 1px solid grey;
   background-color: white;
   cursor: pointer;
+
+  &:hover {
+    background: #3989c9;
+    color: #fff;
+  }
 }
 
 .currency-body__rate-btn {
-  width: 100%;
-  height: 100%;
+  position: relative;
   padding: 10px 15px;
   border: 1px solid grey;
   background: white;
   cursor: pointer;
+
+  &:hover {
+    background: #3989c9;
+    color: #fff;
+  }
 }
+
 .btn_active {
-  background: greenyellow;
+  background: #3989c9;
+  color: #fff;
 }
+
 .currency-body__currency-input {
-  margin: 10px;
+  position: relative;
+  margin: 10px 0px;
   font-size: $heightTxt;
-  padding-left: 10px;
   border: 1px solid grey;
+  padding: 0px 5px;
 }
 
 .currency-body__wrapper-rate {
@@ -72,13 +96,10 @@ $heightTxt: 2em;
 
 .currency-body__view-rate {
   margin: 10px 0px;
-  padding-left: 10px;
   border: 1px solid grey;
   font-size: $heightTxt;
-  height: 36px;
-
-  display: flex;
-  align-items: center;
+  padding: 3px 5px;
+  min-height: 36px;
 }
 
 .currency-body__currency-curse-input {
@@ -91,4 +112,80 @@ $heightTxt: 2em;
   width: 100%;
   display: flex;
   justify-content: flex-start;
+}
+
+.currency-body__all-currency-btn {
+  position: absolute;
+  padding: 10px 10px;
+  border: 1px solid grey;
+  cursor: pointer;
+  &:hover {
+    background: #3989c9;
+    color: #fff;
+  }
+}
+
+.currency-body__all-currency-wrapper {
+  position: absolute;
+  visibility: hidden;
+  width: 50vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background: #fff;
+  z-index: 1;
+  transform: scale(0);
+}
+
+.all-currency-active {
+  visibility: visible;
+  transform: scale(1);
+  transition: 500ms;
+}
+
+.currency-body__all-items {
+  padding: 10px 10px;
+  border: 1px solid gray;
+  margin: 5px 5px;
+  cursor: pointer;
+}
+
+[data-tooltip]::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  width: 200px;
+  left: -100%;
+  top: 0;
+  background: #3989c9;
+  color: #fff;
+  padding: 0.5em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  pointer-events: none;
+  opacity: 0;
+  transition: 1s;
+}
+[data-tooltip]:hover::after {
+  opacity: 1;
+  top: -50px;
+}
+
+[data-tooltip-all]::after {
+  content: attr(data-tooltip-all);
+  position: absolute;
+  width: 200px;
+  top: 0;
+  background: #3989c9;
+  color: #fff;
+  padding: 0.5em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  pointer-events: none;
+  opacity: 0;
+  transition: 1s;
+}
+
+[data-tooltip-all]:hover::after {
+  opacity: 1;
+  top: -50px;
 }
