--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .currency-body__all-currency-btn {
-  position: absolute;
   padding: 10px 10px;
   border: 1px solid grey;
   cursor: pointer;
@@ -265,6 +264,8 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
   -webkit-transform: scale(0);
           transform: scale(0);
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 .all-currency-active {
