--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -27,7 +27,8 @@ $heightTxt: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  padding: 10px 10px;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   h2 {
     padding: 5px 0px;
   }
@@ -37,7 +38,8 @@ $heightTxt: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  padding: 10px 10px;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   h2 {
     padding: 5px 0px;
   }
@@ -55,7 +57,7 @@ $heightTxt: 2em;
   border: 1px solid grey;
   background-color: white;
   cursor: pointer;
-
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   &:hover {
     background: #3989c9;
     color: #fff;
@@ -68,7 +70,7 @@ $heightTxt: 2em;
   border: 1px solid grey;
   background: white;
   cursor: pointer;
-
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   &:hover {
     background: #3989c9;
     color: #fff;
@@ -116,12 +118,22 @@ $heightTxt: 2em;
 
 .currency-body__all-currency-btn {
   padding: 10px 10px;
+  margin-top: 10px;
   border: 1px solid grey;
   cursor: pointer;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
   &:hover {
     background: #3989c9;
     color: #fff;
   }
+}
+
+.currency-body__arrow {
+  width: 15%;
+  height: 90%;
+  background-image: url("../../img/icons/free-icon-exchange-1372789.png");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .currency-body__all-currency-wrapper {
@@ -137,6 +149,7 @@ $heightTxt: 2em;
   z-index: 1;
   transform: scale(0);
   transition: 300ms;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .all-currency-active {
@@ -146,10 +159,15 @@ $heightTxt: 2em;
 }
 
 .currency-body__all-items {
+  position: relative;
   padding: 10px 10px;
   border: 1px solid gray;
   margin: 5px 5px;
   cursor: pointer;
+  &:hover {
+    background: #3989c9;
+    color: #fff;
+  }
 }
 
 [data-tooltip]::after {
@@ -175,6 +193,7 @@ $heightTxt: 2em;
   content: attr(data-tooltip-all);
   position: absolute;
   width: 200px;
+  left: 0%;
   top: 0;
   background: #3989c9;
   color: #fff;
@@ -188,4 +207,40 @@ $heightTxt: 2em;
 [data-tooltip-all]:hover::after {
   opacity: 1;
   top: -50px;
+}
+
+/* Landscape tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .currency-body__all-currency-wrapper {
+    width: 100vw;
+    height: 90vh;
+  }
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+  .currency-body__all-currency-wrapper {
+    width: 100vw;
+    height: 90vh;
+  }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+  .currency-body__all-currency-wrapper {
+    width: 100vw;
+    height: 90vh;
+  }
+}
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+  .currency-body__all-currency-wrapper {
+    width: 100vw;
+    height: 100vh;
+  }
+}
+/* Iphone 5 */
+@media (max-width: 320px) {
+  .currency-body__all-currency-wrapper {
+    width: 100vw;
+    height: 100vh;
+  }
 }
